# codeguardian

./: .gitignore  INTERACTIVE.md  README.md  USAGE.md  pyproject.toml  report.md
.codeguardian_vectordb/: chroma.sqlite3
.github/workflows/: ci.yml  pr-review.yml
docs/: USAGE.md
rules/: style_rules.yaml
rules/security/: secrets.yaml  sql_injection.yaml  xss.yaml
rules/semgrep/: python_security.yaml
src/codeguardian/: __init__.py  bus.py  config.py  llm_filter.py  main.py  orchestrator.py  reporter.py  synthesizer.py
src/codeguardian/agents/: __init__.py  base.py  design_reviewer.py  performance_analyzer.py  security_scanner.py  static_analysis.py  style_checker.py  test_reviewer.py
src/codeguardian/knowledge/: __init__.py  base.py  vector_kb.py
src/codeguardian/models/: __init__.py  findings.py
src/codeguardian/scanner/: __init__.py  engine.py  rules.py
tests/: conftest.py  test_bus.py
tests/test_agents/: test_base.py  test_design_reviewer.py  test_performance_analyzer.py  test_security_scanner.py  test_static_analysis.py  test_style_checker.py  test_test_reviewer.py
